# memdot

./: .docker-compose-version.yml  .env.example  .gitattributes  .gitignore  .prettierignore  .prettierrc.json  AGENTS.md  CONTEXT.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_TRACKER.md  LICENSE  Makefile  OWNERS.md  README.md  dependency-cruiser.cjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json
docs/: README.md
scripts/: backend_fast_gates.py  check_focused_tests.sh  check_rls_registry.sh  check_whitespace.sh  docker_health_smoke.sh  docker_nonroot_check.sh  dompurify-node.mjs  generate_openapi.py  generate_sbom.sh  mermaid-preload.mjs  migrate_domain.sh  secret_scan.sh  secret_scan_patterns.txt  validate_compose_placeholder.sh  validate_docs.py  validate_mermaid.mjs  (+1 more)
services/core/: Dockerfile  README.md  pyproject.toml
services/core/alembic/: env.py
services/core/alembic/versions/: 20260716_0001_phase3_canonical.py  20260716_0001_phase3_canonical.sql  20260717_0002_phase4_runtime.py  20260717_0002_phase4_runtime.sql  20260718_0003_documents_memory_retrieval.py  20260718_0003_documents_memory_retrieval.sql  20260719_0004_learning.py  20260719_0004_learning.sql  20260720_0005_external_lifecycle.py  20260720_0005_external_lifecycle.sql  20260721_0006_security_corrections.py  20260721_0006_security_corrections.sql  20260722_0007_correction_round2.py  20260722_0007_correction_round2.sql
services/core/src/memdot_core/: __init__.py  __main__.py  app.py  deps.py  errors.py  external_context.py  idempotency.py  pagination.py  policy.py  request_context.py  settings.py
services/core/src/memdot_core/auth/: activation.py  bearer.py  bootstrap.py  grant_resolve.py  jwks.py  oidc.py  routes.py  service_auth.py  sessions.py
services/core/src/memdot_core/context/: routes.py  service.py
services/core/src/memdot_core/conversations/: crypto.py  routes.py  service.py
services/core/src/memdot_core/db/: __init__.py  base.py  registry.py  session.py  tenant.py
services/core/src/memdot_core/db/models/: __init__.py  ledger.py  security.py  tenancy.py
services/core/src/memdot_core/deletion/: routes.py  service.py
services/core/src/memdot_core/documents/: routes.py  service.py
services/core/src/memdot_core/export/: routes.py  service.py
services/core/src/memdot_core/ingestion/: __init__.py  normalize.py  orchestrator.py
services/core/src/memdot_core/jobs/: auth_snapshot.py  processor.py  service.py
services/core/src/memdot_core/learning/: __init__.py  routes.py  service.py
services/core/src/memdot_core/mcp/: routes.py  service.py
services/core/src/memdot_core/memory/: routes.py  service.py
services/core/src/memdot_core/notion/: adapter.py  routes.py  service.py
services/core/src/memdot_core/observability/: metrics.py
services/core/src/memdot_core/parsers/: __init__.py  docling_adapter.py  docling_stub.py  native_pdf.py  native_text.py  ocr_fallback.py  registry.py  resource_limits.py
services/core/src/memdot_core/retrieval/: __init__.py  filters.py  graph_lane.py  semantic_lane.py  temporal_lane.py
services/core/src/memdot_core/sources/: __init__.py  routes.py  service.py
services/core/src/memdot_core/storage/: factory.py  s3.py
services/core/tests/: conftest.py  factories.py  rls_helpers.py  session_helpers.py  test_auth_csrf_and_headers_rejected.py  test_auth_oidc.py  test_auth_routes_integration.py  test_conversation_capture.py  test_core_health.py  test_core_settings.py  test_external_lifecycle.py  test_idempotency.py  test_ids.py  test_learning_attempt_integrity.py  test_ledger_constraints.py  test_migrations.py  test_negative_controls.py  test_object_storage.py  test_outbox_jobs.py  test_overload_policy.py  test_pagination.py  test_processor_auth_snapshot.py  test_resource_limits.py  test_roles.py  test_schema_drift.py  test_service_auth_mcp.py  test_signed_job_snapshot.py  test_wave4_outbox.py  test_wave4_parsers.py  test_wave4_policy.py  test_wave4_sources.py  test_wave4_storage.py  test_wave5_documents.py
services/core/tests/fixtures/ingestion/: misleading.pdf.txt  sample_multilingual.txt
services/model-router/: Dockerfile  README.md  pyproject.toml
services/model-router/src/memdot_model_router/: __init__.py  __main__.py  adapters.py  app.py  policy.py  settings.py
services/model-router/tests/: test_model_router_health.py  test_model_router_policy.py  test_model_router_settings.py
services/workers/: Dockerfile  README.md  pyproject.toml
services/workers/src/memdot_workers/: __init__.py  __main__.py  app.py  canary_gates.py  canary_ops_db.py  canary_runner.py  canary_workflows.py  settings.py
services/workers/src/memdot_workers/ingestion/: normalize.py  pipeline.py
services/workers/src/memdot_workers/projections/: rebuild.py
services/workers/tests/: test_canary_ops.py  test_parser_pipeline.py  test_workers_health.py  test_workers_settings.py
(+191 files in other folders)
