[project]
name = "memdot-core"
version = "0.1.0"
description = "Memdot Core FastAPI service skeleton"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "pydantic-settings>=2.10.0",
  "memdot-domain",
  "psycopg[binary]>=3.2.0",
  "boto3>=1.38.0",
]

[project.scripts]
memdot-core = "memdot_core.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memdot_core"]

[tool.uv.sources]
memdot-domain = { workspace = true }
