[project]
name = "memdot-model-router"
version = "0.1.0"
description = "Memdot model-router service skeleton"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "pydantic-settings>=2.10.0",
  "memdot-domain",
]

[project.scripts]
memdot-model-router = "memdot_model_router.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memdot_model_router"]

[tool.uv.sources]
memdot-domain = { workspace = true }
